<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquahaze"
    tools:context=".ui.login.signin.SignInFragment">


    <ImageView
        android:id="@+id/ivSignIn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/cropped_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Rick And Morty"
        android:textAlignment="center"
        android:textColor="@color/eden"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSignIn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/e_mail_hint"
        android:textColorHint="@color/eden"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/chardonnay"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:cursorColor="@color/eden"
        app:endIconMode="clear_text"
        app:helperText="Required Field."
        app:helperTextTextColor="@color/helper_text_color"
        app:hintTextColor="@color/eden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        app:startIconTint="@color/eden">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/eden"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/chardonnay"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:cursorColor="@color/eden"
        app:endIconMode="password_toggle"
        app:helperText="Required Field."
        app:helperTextTextColor="@color/helper_text_color"
        app:hintTextColor="@color/eden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmailSignIn"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:startIconTint="@color/eden">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/chardonnay"
        android:text="@string/sign_in_btn_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/eden"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPasswordSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>